--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <style>
         body {
             font-family: 'Dosis';
-            letter-spacing: 0.1em;}
+            letter-spacing: 0.1em;
+            text-align: justify;}
         aside {
             background: black;
             text-align: center;
@@ -15,14 +16,24 @@
             top: 0;
             width: 20em;
             height: 100%;}
+        aside > h1 {
+            font-size: 2em;}
+        aside > p {
+            margin: 1em;}
         aside * {
             color: silver;
             position: relative;
             top: 20%;}
         a[href^=mailto] {
-            font-weight: bold;}
+            border-style: solid;
+            border: 0 solid silver;
+            border-top-width: medium;
+            padding: 1em;
+            font-weight: bold;
+            text-decoration: none;}
         #main {
-            margin-left: 20em;}
+            margin-left: 20em;
+            padding: 1em;}
     </style>
     <title>Martin Bobák - životopis</title>
 </head>
@@ -31,11 +42,9 @@
 
     <aside>
         <h1>Martin Bobák</h1>
+        <a href='mailto:bobak.mato@gmail.com'>bobak.mato@gmail.com</a>
         <p>
             +421 949 813 260
-        </p>
-        <p>
-            <a href='mailto:bobak.mato@gmail.com'>bobak.mato@gmail.com</a>
         </p>
         <p>
             Humenské nám. 5<br>
