width units of progress bars changed to em and %

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             display: inline-block;
             background: silver;
             height: 1.2em;
-            width: 200px;
+            width: 12em;
             vertical-align: text-bottom;}
         .progressbar > [class*=progress] {
             color: white;
@@ -58,23 +58,23 @@
             font-size: 0.8em;
             text-align: right;}
         .progress13 {
-            width: 26px;}
+            width: 13%;}
         .progress13:after {
             content: '13% ';}
         .progress33 {
-            width: 67px;}
+            width: 33%;}
         .progress33:after {
             content: '33% ';}
         .progress47 {
-            width: 94px;}
+            width: 47%;}
         .progress47:after {
             content: '47%';}
         .progress67 {
-            width: 133px;}
+            width: 67%;}
         .progress67:after {
             content: '67%';}
         .progress90 {
-            width: 180px;}
+            width: 90%;}
         .progress90:after {
             content: '90%';}
         .date {
