--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         <section id='web'>
             <h3>Web</h3>
             <div>
-                HTML, CSS<span class='progressValue'>90 %</span>
+                HTML5, CSS3<span class='progressValue'>80 %</span>
                 <svg class='progressbar'>
                     <rect width='100%' height='100%'></rect>
-                    <rect width='90%' height='100%'></rect>
+                    <rect width='80%' height='100%'></rect>
                 </svg>
             </div>
             <div>
@@ -58,9 +58,16 @@
                     <rect width='47%' height='100%'></rect>
                 </svg>
             </div>
+            <div>
+                PHP<sup>*</sup><span class='progressValue'>40 %</span>
+                <svg class='progressbar'>
+                    <rect width='100%' height='100%'></rect>
+                    <rect width='40%' height='100%'></rect>
+                </svg>
+            </div>
         </section>
         <section id='apps'>
-            <h3>Apps</h3>
+            <h3>Aplikácie</h3>
             <div>
                 Pascal (Delphi/Lazarus)<span class='progressValue'>33 %</span>
                 <svg class='progressbar'>
@@ -109,26 +116,37 @@
                     <rect width='67%' height='100%'></rect>
                 </svg>
             </div>
+            <div>
+                GIMP<sup>*</sup><span class='progressValue'>47 %</span>
+                <svg class='progressbar'>
+                    <rect width='100%' height='100%'></rect>
+                    <rect width='47%' height='100%'></rect>
+                </svg>
+            </div>
         </section>
         <section id='windows'>
             <h3>Windows</h3>
             <div>
-                MS Office Word<span class='progressValue'>75 %</span>
+                Používateľ XP/7/8.1<span class='progressValue'>90 %</span>
                 <svg class='progressbar'>
                     <rect width='100%' height='100%'></rect>
-                    <rect width='75%' height='100%'></rect>
+                    <rect width='90%' height='100%'></rect>
                 </svg>
             </div>
             <div>
-                MS Office Excel<span class='progressValue'>75 %</span>
+                Admin + shell<sup>*</sup><span class='progressValue'>13 %</span>
+                <svg class='progressbar'>
+                    <rect width='100%' height='100%'></rect>
+                    <rect width='13%' height='100%'></rect>
+                </svg>
+            </div>
+            <div>
+                MS Office<span class='progressValue'>75 %</span>
                 <svg class='progressbar'>
                     <rect width='100%' height='100%'></rect>
                     <rect width='75%' height='100%'></rect>
                 </svg>
             </div>
-        </section>
-        <section id='linux'>
-            <h3>Linux</h3>
             <div>
                 T<sub>E</sub>X<span class='progressValue'>13 %</span>
                 <svg class='progressbar'>
@@ -136,15 +154,25 @@
                     <rect width='13%' height='100%'></rect>
                 </svg>
             </div>
+        </section>
+        <section id='linux'>
+            <h3>Linux</h3>
             <div>
-                LibreOffice Writer<span class='progressValue'>75 %</span>
+                Používateľ Ubuntu/Mint<span class='progressValue'>75 %</span>
                 <svg class='progressbar'>
                     <rect width='100%' height='100%'></rect>
                     <rect width='75%' height='100%'></rect>
                 </svg>
             </div>
             <div>
-                LibreOffice Calc<span class='progressValue'>75 %</span>
+                Admin + shell<span class='progressValue'>33 %</span>
+                <svg class='progressbar'>
+                    <rect width='100%' height='100%'></rect>
+                    <rect width='33%' height='100%'></rect>
+                </svg>
+            </div>
+            <div>
+                LibreOffice<span class='progressValue'>75 %</span>
                 <svg class='progressbar'>
                     <rect width='100%' height='100%'></rect>
                     <rect width='75%' height='100%'></rect>
